# tls-from-scratch

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  main.rs  tls.rs  tls_client.rs
src/test/: client_hello.txt  server_hello.txt
src/tls_client/: client_hello.rs  server_hello.rs
