[package]
name = "tls-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
rand = "0.7.3"
rand_os = "0.2.2"
sha2 = "0.10.6"
x25519-dalek = "1.2.0"
